@@ -1,4 +1,6 @@
 
+Jan 18, 2009: libarchive 2.6.1 released
+
 Dec 28, 2008: libarchive 2.6.0 released
 
 Dec 25, 2008: libarchive 2.5.905a released
